# Stegano

./: .editorconfig  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  INSTALL  LSB.py  MANIFEST.in  Pipfile  README  README.md  README.rst  basic.py  benchmark_performance.py  exif-header.py  lorem_ipsum.txt  lsb-s.py  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  setup.py.back  steganalyse.py  steganalysis-parity.py  steganalysis-statistics.py  tools.py
.builds/: debian.yml
.github/workflows/: pythonapp.yaml  release.yml
doc/: example1.sh
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  module.rst  software.rst  steganalysis.rst  tutorial.rst
examples/: example-lsb.py  example1.sh  example2.sh  example3.sh  example4.sh  lorem_ipsum.txt
exif/: minimal_exif_reader.py
stegano/: __init__.py  basic.py  exifHeader.py  generators.py  slsb-gen.py  slsb.py  slsbset.py  steganalysis-parity.py  steganalysisParity.py  steganalysisStatistics.py  tools.py
stegano/console/: exifHeader.py  lsb.py  parity.py  red.py  statistics.py  wav.py
stegano/exif/: minimal_exif_reader.py  minimal_exif_writer.py
stegano/exifHeader/: __init__.py  exifHeader.py
stegano/lsb/: __init__.py  generators.py  lsb.py
stegano/lsbset/: __init__.py  generators.py  lsbset.py
stegano/red/: __init__.py  red.py
stegano/steganalysis/: __init__.py  parity.py  statistics.py  steganalysisParity.py  steganalysisStatistics.py
stegano/wav/: __init__.py  wav.py
tests/: test_exifHeader.py  test_generators.py  test_lsb.py  test_lsbset.py  test_red.py  test_slsb.py  test_slsbset.py  test_steganalysis.py  test_tools.py  test_wav.py
tests/expected-results/: LFSR  ackermann  binary2base64  carmichael  composite  eratosthenes  fermat  mersenne  shi_tomashi.txt  statistics  triangular_numbers
tests/sample-files/: lorem_ipsum.txt
tools/: run_mypy.py
