[tool.poetry]
name = "stegano"
version = "0.11.1"
description = "A pure Python Steganography module."
authors = [
    "Cédric Bonhomme <cedric@cedricbonhomme.org>"
]
license = "GPL-3.0-or-later"

readme = "README.md"

homepage = "https://sr.ht/~cedric/stegano"
repository = "https://git.sr.ht/~cedric/stegano"
documentation = "https://stegano.readthedocs.io"

keywords = ["steganography", "security", "stegano"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

include = [
    "README.md",
    "COPYING",
    "CHANGELOG.md",
    "docs/**/*",
    "bin/*"
]

[tool.poetry.scripts]
stegano-lsb = "bin.lsb:main"
stegano-red = "bin.red:main"
stegano-steganalysis-parity = "bin.parity:main"
stegano-steganalysis-statistics = "bin.statistics:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pillow = "^9.2.0"
piexif = "^1.1.3"
crayons = "^0.4.0"
opencv-python = "^4.6.0.66"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"
nose2 = "^0.10.0"
Sphinx = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs|stegano.egg-info"
